Restaurant model changed and add add new restaurant

--- a/YourPlace/Views/Shared/_Layout.cshtml
+++ b/YourPlace/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
-                    <li>@Html.ActionLink("Restaurants", "Index", "Restaurant")</li>
+                    <li>@Html.ActionLink("Restaurants", "Index", "Restaurants")</li>
+                    <li>@Html.ActionLink("Add New Restaurant", "NewRestaurant", "Restaurants")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
