Added validation to restaurant

--- a/YourPlace/Views/Restaurants/NewRestaurant.cshtml
+++ b/YourPlace/Views/Restaurants/NewRestaurant.cshtml
@@ -10,14 +10,17 @@
     <div>
         @Html.LabelFor(m => m.Name)
         @Html.TextBoxFor(m => m.Name)
+        @Html.ValidationMessageFor(m => m.Name)
     </div>
     <div>
         @Html.LabelFor(m => m.RestaurantType)
         @Html.TextBoxFor(m => m.RestaurantType)
+        @Html.ValidationMessageFor(m => m.RestaurantType)
     </div>
     <div>
         @Html.LabelFor(m => m.Localisation)
         @Html.TextBoxFor(m => m.Localisation)
+        @Html.ValidationMessageFor(m => m.Localisation)
     </div>
     <button type="submit">Save</button>
 }
