--- a/YourPlace/Views/Restaurants/Index.cshtml
+++ b/YourPlace/Views/Restaurants/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model YourPlace.ViewModels.RestaurantsViewModel
+﻿@model YourPlace.ViewModels.AllRestaurantsViewModel
 @{
     ViewBag.Title = "Index";
 }
