Comment Model changed and Display an Author in Comment

--- a/YourPlace/Views/Restaurants/Details.cshtml
+++ b/YourPlace/Views/Restaurants/Details.cshtml
@@ -22,7 +22,8 @@
 @foreach (var comment in Model.Comments)
 {
     <ul>
-        <li>@comment.Body</li>
+        <li>The Author: @comment.AuthorName <br />
+            Comment: @comment.Body</li>
     </ul>
 }
 
