--- a/YourPlace/Views/Restaurants/_ChildReplies.cshtml
+++ b/YourPlace/Views/Restaurants/_ChildReplies.cshtml
@@ -1,19 +1,28 @@
-﻿@model  List<Reply>
+﻿@model YourPlace.ViewModels.ChildReplyViewModel
 
 @using YourPlace.Models
+@using YourPlace.ViewModels
 
 <ul>
-    @foreach (var reply in @Model)
-     {
-        <li>
-            Author: @reply.AuthorName<br />
-            Comment: @reply.Body
-            @if (reply.ChildReplies != null && reply.ChildReplies.Count > 0)
-             {
-                <div>
-                 @{Html.RenderPartial("_ChildReplies", reply.ChildReplies); }
-                </div>
-             }
-        </li> 
-     }
+    @foreach (var reply in Model.ChildReplies)
+    {
+    <li>
+        Author: @reply.AuthorName<br />
+        Comment: @reply.Body
+        @using (Html.BeginForm("AddChildReply", "Restaurants", new { restaurantId = Model.RestaurantId, commentId = Model.CommentId,
+            parentReplyId = reply.Id }))
+        {
+            @Html.TextBoxFor(r => r.NewChildReply.Body)
+            <button type="submit">Reply</button>
+        }
+
+        @if (reply.ChildReplies != null && reply.ChildReplies.Count > 0)
+        {
+            <div>
+                @{Html.RenderPartial("_ChildReplies", new ChildReplyViewModel { ChildReplies = reply.ChildReplies,
+                        RestaurantId = Model.RestaurantId, CommentId = Model.CommentId });}
+            </div>
+        }
+    </li>
+    }
 </ul>
