--- a/YourPlace/Views/Customers/Index.cshtml
+++ b/YourPlace/Views/Customers/Index.cshtml
@@ -8,7 +8,7 @@
 <ul>
     @foreach (var customer in Model.Customers)
     {
-        <li>@customer.Email</li>
+        <li>@Html.ActionLink(customer.Email, "Details", "Customers", new { id = customer.Id }, null) </li>
     }
 </ul>
 
