Added DateOfRegister to ApplicationUser model

--- a/YourPlace/Views/Customers/Details.cshtml
+++ b/YourPlace/Views/Customers/Details.cshtml
@@ -6,5 +6,6 @@
 
 <h2>User details</h2>
 
-<p>Email:@Model.Email</p>
-<p>Name:@Model.UserName</p>
+<p>Email: @Model.Email</p>
+<p>Name: @Model.UserName</p>
+<p>Joined: @Model.DateOfRegister</p>
